tests/compile-fail/Rule_22_1.rs
#[forbid(clippy_pedantic)]
"N/A"
//~^ ERROR expected item, found `"N/A"`
